[gd_scene load_steps=5 format=3 uid="uid://drrlbdexgwnyd"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_gmye7"]
[ext_resource type="PackedScene" uid="uid://cdaydmfjad5ow" path="res://scenes/ui/user_interface.tscn" id="1_sqg1d"]
[ext_resource type="PackedScene" uid="uid://dpypjoppaaqqq" path="res://scenes/world/world2.tscn" id="2_gpb5u"]
[ext_resource type="PackedScene" uid="uid://bgkvxlt53f0kq" path="res://scenes/character/flying_saucer.tscn" id="3_88dor"]

[node name="game" type="Node"]
script = ExtResource("1_gmye7")

[node name="user_interface" parent="." instance=ExtResource("1_sqg1d")]

[node name="world2" parent="." instance=ExtResource("2_gpb5u")]

[node name="flying_saucer" parent="." instance=ExtResource("3_88dor")]
unique_name_in_owner = true
position = Vector2(127, 372)

[node name="Camera2D" type="Camera2D" parent="flying_saucer"]

[connection signal="user_requested_quit_game" from="user_interface" to="." method="_on_user_interface_user_requested_quit_game"]
[connection signal="user_requested_resume_game" from="user_interface" to="." method="_on_user_interface_user_requested_resume_game"]
[connection signal="user_requested_start_game" from="user_interface" to="." method="_on_user_interface_user_requested_start_game"]
